--- a/src/index.html
+++ b/src/index.html
@@ -7,29 +7,8 @@
 </head>
 <body>
   <div class="page">
-  <section id="app1">
-    <div id="value">100</div>
-    <button id="add">+1</button>
-    <button id="minus">-1</button>
-    <button id="mul">*2</button>
-    <button id="divide">÷2</button>
-  </section>
-  <section id="app2">
-    <ol id="table-bar">
-      <li>区域1</li>
-      <li>区域2</li>
-    </ol>
-    <ol id="table-content">
-      <li>第一部分的内容</li>
-      <li>第二部分的内容</li>
-    </ol>
-  </section>
-  <section id="app3">
-    <div class="square"></div>
-  </section>
-<section id="app4">
-  <div class="circle"></div>
-</section>
+    <section id="app1"></section>
+    <section id="app2"></section>
 </div>
   <script src="main.js"></script>
 </body>
